--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
-        "target": "es5",
+        "experimentalDecorators": true,
+        "target": "es2017",
         "lib": [
             "dom",
             "dom.iterable",
@@ -17,7 +18,17 @@
         "resolveJsonModule": true,
         "isolatedModules": true,
         "noEmit": true,
-        "jsx": "preserve"
+        "jsx": "preserve",
+        "baseUrl": "src",
+        "rootDir": ".",
+        "paths": {
+            "@comps/*": [
+                "./src/components/*"
+            ],
+            "@conts/*": [
+                "./src/containers/*"
+            ]
+        }
     },
     "include": [
         "src"
