优化权限控制路由跳转

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,11 +22,14 @@
         "baseUrl": "src",
         "rootDir": ".",
         "paths": {
-            "@comps/*": [
+            "@components/*": [
                 "./src/components/*"
             ],
-            "@conts/*": [
+            "@containers/*": [
                 "./src/containers/*"
+            ],
+            "@utils/*": [
+                "./src/utils/*"
             ]
         }
     },
