--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
         "react-router-dom": "^5.0.0",
         "resolve": "1.10.0",
         "sass-loader": "^7.1.0",
+        "sass-resources-loader": "^2.0.0",
         "semver": "6.0.0",
         "style-loader": "^0.23.1",
         "terser-webpack-plugin": "1.2.3",
