--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
         "@babel/plugin-transform-react-jsx-source": "^7.2.0",
         "@svgr/webpack": "4.1.0",
         "@types/jest": "24.0.12",
+        "@types/lodash": "^4.14.130",
         "@types/node": "12.0.0",
-        "@types/react": "16.8.17",
-        "@types/react-dom": "16.8.4",
         "@typescript-eslint/eslint-plugin": "1.6.0",
         "@typescript-eslint/parser": "1.6.0",
         "babel-eslint": "10.0.1",
@@ -41,8 +40,8 @@
         "jest-environment-jsdom-fourteen": "0.1.0",
         "jest-resolve": "24.7.1",
         "jest-watch-typeahead": "0.3.0",
+        "lodash": "^4.17.11",
         "mini-css-extract-plugin": "0.5.0",
-        "mobx-react": "^5.4.3",
         "node-sass": "^4.12.0",
         "optimize-css-assets-webpack-plugin": "5.0.1",
         "pnp-webpack-plugin": "1.2.1",
@@ -51,7 +50,6 @@
         "postcss-normalize": "7.0.1",
         "postcss-preset-env": "6.6.0",
         "postcss-safe-parser": "4.0.1",
-        "pure-render-decorator": "^1.2.1",
         "react": "^16.8.6",
         "react-app-polyfill": "^1.0.1",
         "react-dev-utils": "^9.0.1",
@@ -144,6 +142,9 @@
     },
     "devDependencies": {
         "@types/pure-render-decorator": "^0.2.28",
+        "@types/react": "^16.8.18",
+        "@types/react-dom": "^16.8.4",
+        "@types/react-router-dom": "^4.3.3",
         "tsconfig-paths": "^3.8.0"
     }
 }
