--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,15 @@
             ],
             "@utils": [
                 "../src/utils"
+            ],
+            "@request": [
+                "../src/request"
+            ],
+            "@router": [
+                "../src/router"
+            ],
+            "@assets": [
+                "../src/assets"
             ]
         }
     },
