--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@types/node": "12.0.0",
         "@typescript-eslint/eslint-plugin": "1.6.0",
         "@typescript-eslint/parser": "1.6.0",
+        "axios": "^0.18.0",
         "babel-eslint": "10.0.1",
         "babel-jest": "^24.8.0",
         "babel-loader": "8.0.5",
