项目结构调整

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,11 +22,17 @@
         "baseUrl": "src",
         "rootDir": ".",
         "paths": {
+            "@/*": [
+                "../src/*"
+            ],
             "@components": [
                 "../src/components"
             ],
             "@containers": [
                 "../src/containers"
+            ],
+            "@base/*": [
+                "../src/base/*"
             ],
             "@utils": [
                 "../src/utils"
